cganged title from Practicum to CBL

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Python Crash Course for Practicum Process Technology"
+  title: "Python Crash Course for CBL Process Technology"
   site-url: "https://MattiaGalantii.github.io/PPT_intro_slides"
 
 format:
